@@ -39,6 +39,7 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -285,7 +286,7 @@ public class UnassignedInfoTests extends ESAllocationTestCase {
         IndexRoutingTable.Builder builder = IndexRoutingTable.builder(index);
         final IndexRoutingTable indexRoutingTable = clusterState.routingTable().index(index);
         for (int i = 0; i < indexRoutingTable.size(); i++) {
-            builder.addIndexShard(indexRoutingTable.shard(i));
+            builder.addIndexShard(new IndexShardRoutingTable.Builder(indexRoutingTable.shard(i)));
         }
         builder.addReplica();
         clusterState = ClusterState.builder(clusterState)
@@ -384,7 +385,8 @@ public class UnassignedInfoTests extends ESAllocationTestCase {
         ShardRouting shardToFail = shardsWithState(clusterState.getRoutingNodes(), STARTED).get(0);
         clusterState = allocation.applyFailedShards(
             clusterState,
-            Collections.singletonList(new FailedShard(shardToFail, "test fail", null, randomBoolean()))
+            Collections.singletonList(new FailedShard(shardToFail, "test fail", null, randomBoolean())),
+            List.of()
         );
         // verify the reason and details
         assertThat(clusterState.getRoutingNodes().unassigned().size() > 0, equalTo(true));
